# yiTrace

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  SmithDB 观测数据库.docx
docs/: 2026-06-17_决策摘要与Phase0行动计划.md  2026-06-22_vexdb-trace-产品说明.md  2026-06-22_yitrace-产品说明.md  API_REFERENCE.md  CURRENT_STATE.md
docs/analysis/: 2026-06-17_doris-lance-article-takeaways.md  2026-06-18_feature-gap-review.md  2026-06-22_project-review.md  2026-06-22_竞品分析.md  2026-06-24_检索跨段扩展性分析.md
docs/design/: 2026-06-16_agent-trace-db-architecture.md  2026-06-16_tracevault-schema.md  2026-06-17_tracevault-background-scheduling.md  2026-06-17_tracevault-distribution-packaging.md  2026-06-17_tracevault-ingestion.md  2026-06-17_tracevault-level1-storage-engine.md  2026-06-17_tracevault-platform-gateway-trace-browser.md  2026-06-17_vexdb-trace-engine-decision.md  2026-06-17_vexdb-trace-l1-datafusion-lance.md  2026-06-17_yitrace-l1-plan-b-datafusion-vortex.md  2026-06-17_yitrace-segment-snapshot-hardened.md  2026-06-18_yitrace-phase0-poc-plan.md  2026-06-22_vexdb-trace-技术文档.md  2026-06-22_列式段存储-vortex-选型与落地计划.md  2026-06-23_BM25-生产化-分词接缝与jieba接入.md  2026-06-23_向量索引-磁盘型图索引-落盘设计.md  appendix-A_design-proposals.md  appendix-B_unified-architecture-raw.md  appendix-C_redteam-critiques.md  appendix-D_platform-redesign.md  appendix-E_revised-plan-raw.md  appendix-F_redteam-round2.md  appendix-G_xinchuang-redesign.md  appendix-H_redteam-round3.md  appendix-I_schema-design.md  appendix-J_schema-redteam.md  appendix-K_kernel-boundary.md  appendix-L_kernel-redteam.md  appendix-M_scheduling-design.md  appendix-N_scheduling-redteam.md  appendix-O_level1-storage-design.md  appendix-P_level1-research.md  appendix-Q_level1-redteam.md
docs/design/poc/: README.md  verify_opengauss_yitrace.sql
docs/design/prototype/: trace-browser.html
docs/plans/: 2026-06-26_生产就绪路线.md
docs/reports/: 2026-07-02_project-review.md  2026-07-02_readme-10k-star-review.md
docs/research/: 2026-06-16_smithdb-and-landscape-research.md  2026-06-18_agent-observability-competitors.md  2026-06-22_pglance-参考价值评估.md  2026-06-22_国产竞品调研.md
tests/: crash_recovery_kill9.sh
tracevault-extension/: Makefile  README.md  tracevault--1.0.sql  tracevault.control
yitrace-console/: README.md  index.html  package-lock.json  package.json  vite.config.ts
yitrace-console/src/: App.tsx  main.tsx  styles.css  vite-env.d.ts
yitrace-console/src/api/: http.ts  index.ts  mock.ts  types.ts
yitrace-console/src/components/: AgentGraph.tsx  Flame.tsx  SearchResults.tsx  SessionList.tsx  SpanDetail.tsx  StepStream.tsx  TurnTimeline.tsx  Waterfall.tsx
yitrace-console/src/hooks/: queries.ts
yitrace-engine/: Cargo.toml  README.md
yitrace-engine/crates/yt-core/: Cargo.toml
yitrace-engine/crates/yt-core/examples/: print_event_id.rs
yitrace-engine/crates/yt-core/src/: lib.rs
yitrace-engine/crates/yt-engine/: Cargo.toml  build.rs
yitrace-engine/crates/yt-engine/data/: JIEBA_DICT_NOTICE.md
yitrace-engine/crates/yt-engine/examples/: bench.rs  bench_qps.rs  demo.rs  eval_harness.rs  server.rs  server_durable.rs
yitrace-engine/crates/yt-engine/src/: bm25.rs  evalkit.rs  gc_log.rs  graph.rs  http.rs  lib.rs  olog.rs  otlp.rs  persist.rs  segstore.rs  tokenizer_cn.rs  vecindex_disk.rs  vecstore.rs  wire.rs
yitrace-engine/crates/yt-engine/tests/: eval_harness.rs
yitrace-engine/crates/yt-manifest/: Cargo.toml
yitrace-engine/crates/yt-manifest/src/: lib.rs
yitrace-engine/crates/yt-memtable/: Cargo.toml
yitrace-engine/crates/yt-memtable/src/: lib.rs
yitrace-engine/crates/yt-wal/: Cargo.toml
yitrace-engine/crates/yt-wal/src/: lib.rs
yitrace-sdk/python/: README.md  pyproject.toml
yitrace-sdk/python/tests/: test_sdk.py
yitrace-sdk/python/yitrace/: __init__.py  _snowflake.py  event.py  exporter.py  tracer.py
yitrace-sdk/typescript/: README.md  package-lock.json  package.json  tsconfig.json
yitrace-sdk/typescript/src/: event.ts  exporter.ts  index.ts  snowflake.ts  tracer.ts
yitrace-sdk/typescript/test/: test_sdk.ts
yitrace-segstore-vortex/: Cargo.toml  README.md
yitrace-segstore-vortex/src/: lib.rs
yitrace-tokenizer-jieba/: ABI.md  Cargo.toml  README.md  build.rs
yitrace-tokenizer-jieba/src/: lib.rs
yitrace-vecindex-graph/: ABI.md  Cargo.toml  README.md  build.rs
yitrace-vecindex-graph/src/: lib.rs
