[package]
name = "yt-engine"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
yt-core = { path = "../yt-core" }
yt-manifest = { path = "../yt-manifest" }
yt-wal = { path = "../yt-wal" }
yt-memtable = { path = "../yt-memtable" }
# 可选：gzip 请求体解压。默认关 → 离线 std-only 构建不受影响；开 `--features gzip` 才拉 flate2。
flate2 = { version = "1", optional = true }

[features]
gzip = ["dep:flate2"]
